@startuml

title __LAB ACTIVITY 2's Class Diagram__\n

  namespace  {
    class Circle {
    }
  }
  

  namespace  {
    class Ellipse {
    }
  }
  

  namespace  {
    class GStar {
    }
  }
  

  namespace  {
    class Main {
    }
  }
  

  namespace  {
    class PhilippineFlag {
    }
  }
  

  namespace  {
    class Rectangle {
    }
  }
  

  namespace  {
    abstract class Shape {
    }
  }
  

  namespace  {
    class ShapeCalculator {
    }
  }
  

  namespace  {
    class Square {
    }
  }
  

  namespace  {
    class Trapezoid {
    }
  }
  

  Circle -up-|> Shape
  Ellipse -up-|> Shape
  GStar -up-|> acm.graphics.GPolygon
  Main -up-|> acm.program.GraphicsProgram
  PhilippineFlag -up-|> acm.program.GraphicsProgram
  Rectangle -up-|> Shape
  Square -up-|> Shape
  Trapezoid -up-|> Shape


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
